# pikasso

./: .flake8  .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: python-app.yml
backend/: Dockerfile  README.md  conftest.py  manage.py  pytest.ini  requirements.txt  requirements_dev.txt  requirements_test.txt
backend/authentication/: serializers.py  services.py  urls.py  views.py
backend/authentication/tests/: test_services.py  test_urls.py
backend/bicycles/: models.py  serializers.py  services.py  urls.py  views.py
backend/bicycles/migrations/: 0001_initial.py  0002_alter_bicycle_name.py
backend/bicycles/tests/: test_services.py  test_urls.py
backend/rent/: asgi.py  celery.py  settings.py  settings_test.py  urls.py  wsgi.py
backend/users/: models.py  tasks.py
backend/users/migrations/: 0001_initial.py
infra/: docker-compose.yml
